[metadata]
name = openstack_health_middleware
summary = Openstack healthcheck plugins
description_file =
    README.md
author = SCS
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    openstack_health_middleware

[entry_points]
oslo.middleware.healthcheck =
    infra_health = openstack_health_middleware.infra_health:InfraHealthCheck

